   COMPUTE-SLOTS assign a location to each slot definition that has allocation
   :INSTANCE or :CLASS.

 - A new defclass option, :optimize-slot-access, which defaults to T, controls
   whether the slots accessors should address directly the values in the class
   or use SLOT-VALUE. It should be set to NIL when one intends to redefine the
   SLOT-*-USING-CLASS methods.

* Errors fixed:

 - The intermediate output of the compiler is written in the directory in which
   the output will reside. [1]

 - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
   doing the real work of (re)defining generic functions. This means E-G-F now
   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.

 - Implemented the standard behavior of NO-APPLICABLE-METHOD. Formerly, ECL
   expected this function to simply fail and never return.

 - --disable-shared works again in Mingw. The header file external.h has to be
   modified at build time to remove a declaration "dllimport" which mingw does
   not support in the statically linked code. MSVC++ does not seem to have a
   problem with it, though.

 - It is now possible to define subclasses of STANDARD-CLASS. Before, some
   slots were not properly inherited by subclasses, causing errors when doing
   something like
	> (defclass foo (standard-class) ())
	> (defclass faa () () (:metaclass foo))

 - Callback functions are now 'static' so that the same names can be used
   in different files.

 - New method for DOCUMENTATION to operate on slot-definition objects.

 - New slot options are now allowed, as well as new metaclass options.

 - SLOT-{VALUE,BOUNDP,MAKUNBOUND}-USING-CLASS now are also specialized for
   standard-effective-slot-definition (Thanks to D. Corkill)

 - Constants are now implicitely declared global in the file in which they are
   defined, so that the compiler no longer issues warnings when they are
   referenced.

 - The slot GENERIC-FUNCTION of a method is initially set to NIL instead of