@@ -1559,7 +1559,7 @@ cl_symbols[] = {
 {CLOS_ "FORWARD-REFERENCED-CLASS",NULL},
 {CLOS_ "FUNCALLABLE-",NULL},
 {CLOS_ "FUNCALLABLE-STANDARD-CLASS",NULL},
-{CLOS_ "FUNCALLABLE-STANDARD-INSTANCE-ACCESS",NULL},
+{CLOS_ "FUNCALLABLE-STANDARD-INSTANCE-ACCESS","si_instance_ref"},
 {CLOS_ "GENERIC-FUNCTION-ARGUMENT-PRECEDENCE-ORDER",NULL},
 {CLOS_ "GENERIC-FUNCTION-DECLARATIONS",NULL},
 {CLOS_ "GENERIC-FUNCTION-LAMBDA-LIST",NULL},
@@ -1599,7 +1599,7 @@ cl_symbols[] = {
 {CLOS_ "STANDARD-",NULL},
 {CLOS_ "STANDARD-DIRECT-SLOT-DEFINITION",NULL},
 {CLOS_ "STANDARD-EFFECTIVE-SLOT-DEFINITION",NULL},
-{CLOS_ "STANDARD-INSTANCE-ACCESS",NULL},
+{CLOS_ "STANDARD-INSTANCE-ACCESS","si_instance_ref"},
 {CLOS_ "STANDARD-READER-METHOD",NULL},
 {CLOS_ "STANDARD-SLOT-DEFINITION",NULL},
 {CLOS_ "STANDARD-WRITER-METHOD",NULL},
